@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.2.0 (unreleased)
 ------------------
 
+- Skinstool import: Fix imports that manipulate existing skins.
+  (https://bugs.launchpad.net/zope-cmf/+bug/161732)
+
 - ActionInformation: extend the ActionInformation and ActionInfo classes 
   to support a icon URL just like the newer Action class already does
 
